<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/lbl_host_name"
        android:id="@+id/lbl_host_name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/lbl_host_name"
        app:layout_constraintBaseline_toBaselineOf="@id/lbl_host_name"
        android:textAppearance="?android:attr/textAppearanceMedium"
        tools:text="@string/host_name"
        android:id="@+id/host_name"
        android:layout_marginStart="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/lbl_host_name"
        app:layout_constraintTop_toBottomOf="@id/lbl_host_name"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/lbl_status"
        android:id="@+id/lbl_status"
        android:layout_marginTop="40dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/host_name"
        app:layout_constraintBaseline_toBaselineOf="@id/lbl_status"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/lbl_connected_status"
        android:id="@+id/lbl_connection_status" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/lbl_connection_status"
        android:text="@string/btn_search"
        android:id="@+id/btn_search"
        android:layout_marginTop="50dp" />

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_search"
        android:id="@+id/progressBar"
        android:indeterminate="true"
        android:visibility="invisible"
        android:layout_marginTop="40dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/progressBar"
        app:layout_constraintEnd_toEndOf="@id/progressBar"
        app:layout_constraintTop_toBottomOf="@id/progressBar"
        android:layout_marginTop="10dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/progressText"
        android:gravity="center"
        android:visibility="invisible" />

</androidx.constraintlayout.widget.ConstraintLayout>